--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,26 +6,68 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="76dp"
+        android:layout_height="34dp"
+
+        android:layout_marginTop="32dp"
+        android:gravity="center"
+        android:text="PORT:"
+        android:textColor="@android:color/black"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:visibility="visible"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        tools:ignore="MissingConstraints" />
+
     <Button
-        android:id="@+id/button"
+        android:id="@+id/connect_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         android:layout_marginEnd="135dp"
         android:layout_marginStart="136dp"
+        android:backgroundTint="@android:color/holo_green_light"
         android:text="Connect"
+        android:textColor="@android:color/black"
+        android:textSize="16sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="57dp"
+        android:layout_height="41dp"
         android:gravity="center"
-        android:text="           IP"
+
+        android:text="IP:"
+        android:textColor="@android:color/black"
+        android:textSize="20sp"
+        android:textStyle="bold"
         android:visibility="visible"
-        tools:layout_editor_absoluteX="16dp"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteY="65dp" />
+
+    <EditText
+        android:id="@+id/port_text"
+        android:layout_width="214dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="27dp"
+        app:layout_constraintStart_toEndOf="@+id/textView2"
+        app:layout_constraintTop_toBottomOf="@+id/ip_text" />
+
+    <EditText
+        android:id="@+id/ip_text"
+        android:layout_width="214dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="23dp"
+        app:layout_constraintStart_toEndOf="@+id/textView"
         tools:layout_editor_absoluteY="65dp" />
 
 </android.support.constraint.ConstraintLayout>
